<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_offer"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <EditText
                android:id="@+id/TxtTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/offers_tittle"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/TxtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/TxtCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/cellphone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/TxtDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/description"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_primary"
                android:onClick="CreateOffer"
                android:text="@string/save"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

        </LinearLayout>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/MenuH"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            app:fab_addButtonColorNormal="@color/colorPrimary"
            app:fab_addButtonColorPressed="@color/colorPrimaryDark"
            app:fab_addButtonPlusIconColor="@color/common_google_signin_btn_text_dark_default"
            android:layout_margin="20dp"
            app:fab_labelStyle="@style/customFab"

            >
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:fab_colorNormal="@color/design_default_color_primary"
                app:fab_colorPressed="@color/design_default_color_primary_dark"
                app:fab_icon="@drawable/ic_perm_identity_black_24dp"
                app:fab_size="normal"
                app:fab_title="@string/perfil"
                android:onClick="AaProfile"

                />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:fab_colorNormal="@color/design_default_color_primary"
                app:fab_colorPressed="@color/design_default_color_primary_dark"
                app:fab_icon="@drawable/ic_folder_open_black_24dp"
                app:fab_size="normal"
                app:fab_title="@string/my_offers"
                android:onClick="AaMyOffers"
                />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:fab_colorNormal="@color/design_default_color_primary"
                app:fab_colorPressed="@color/design_default_color_primary_dark"
                app:fab_icon="@drawable/ic_home_black_24dp"
                app:fab_size="normal"
                android:onClick="AaHome"
                />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>